...
            Spacer(modifier = Modifier.height(40.dp))

            Button(
                onClick = onLogin,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("openLoginButton")
            ) {
                Text(stringResource(R.string.public_home_login))
            }

            OutlinedButton(
                onClick = onRegister,
...
            }

            TextButton(
                onClick = onOpenCatalogue,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("openCatalogueButton")
            ) {
                Text(stringResource(R.string.public_home_catalogue))
            }
        }
    }
}
...
