...
    }

    // Root container
    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("catalogueScreen")
    ) {

        // Background wallpaper
        Image(
            painter = painterResource(id = R.drawable.seepaw_wallpaper),
            contentDescription = null,
...
                            contentPadding = PaddingValues(bottom = 16.dp),
                            horizontalArrangement = Arrangement.spacedBy(8.dp),
                            verticalArrangement = Arrangement.spacedBy(8.dp),
                            modifier = Modifier
                                .weight(1f)
                                .fillMaxWidth()
                                .testTag("animalGrid")
                        ) {
                            items(state.animals) { animal ->
                                AnimalCard(
                                    name = animal.name,
                                    age = animal.age,
                                    imageUrl = animal.imageUrl,
...
